--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="css/colors.css" />
   <link rel="stylesheet" href="css/helper.css" />
 
-  <title>Aldo González</title>
+  <title>Aldo Gonzálezzzz</title>
 
 </head>
 <body>
