--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -62,7 +62,7 @@
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
-            <a href="nosotros.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Nosotros</a>
+            <a href="nosotros.html" class="link-menu no-decotext f-comfortaa fsp-18 fw-700 px-3 ">Nosotros</a>
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
