--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="logos\A.png">
-  <link rel="apple-touch-icon" href="logos\A.png">
+  <link rel="shortcut icon" href="media/favicon-v.png">
+  <link rel="apple-touch-icon" href="media/favicon-r.png">
 
   <!-- bootstrap 5.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,7 +66,8 @@
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
-            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y servicios</a>
+            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+              servicios</a>
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
@@ -77,16 +78,115 @@
       </div>
 
       <div class="">
-        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20" class="d-flex justify-content-start align-items-center link-menu py-1">
-          <div><img src="media/wzp.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div> 
+        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
+          class="d-flex justify-content-start align-items-center link-menu py-1">
+          <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
         </a>
-        <a href="mailto:ventas@spcomercial.cl" class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
-          <div><img src="media/mailto.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div> 
+        <a href="mailto:ventas@spcomercial.cl"
+          class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
+          <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
         </a>
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+  <div class="position-relative">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="media/banner_01.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="media/banner_02.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="media/banner_03.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
         </div>
       </div>
+    </div>
+
+    <div class="position-absolute top-0 start-0 w-100 h-100">
+      <div class="w-100 h-100 d-flex justify-content-center align-items-center">
+        <div class="">
+          <img src="media/logo-simple.png" class="h-auto mxwp-400">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-center w-100">
+    <div class="w-100 mxwp-1200 row">
+      <div class="col-4 d-flex justify-content-center align-items-center">
+        <div class="d-flex flex-column justify-content-center py-4">
+          <img src="media/restaurant.svg" class="mxhp-120" />
+          <div class="f-comfortaa fsp-24 fw-600 text-center">Restaurantes</div>
+        </div>
+      </div>
+      <div class="col-4 justify-content-center align-content-center">
+        <div class="d-flex flex-column justify-content-center py-4">
+          <img src="media/hoteles.svg" class="mxhp-120" />
+          <div class="f-comfortaa fsp-24 fw-600 text-center">Hotelería</div>
+        </div>
+      </div>
+      <div class="col-4 justify-content-center align-content-center">
+        <div class="d-flex flex-column justify-content-center py-4">
+          <img src="media/cattering.svg" class="mxhp-120" />
+          <div class="f-comfortaa fsp-24 fw-600 text-center">Cattering</div>
+          <div class="f-comfortaa fsp-24 fw-600 text-center">y banquetería</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <a href="contacto.html" class="w-100 hp-80 d-flex justify-content-center bgc-vitalia no-decotext">
+    <div class="f-comfortaa fsp-24 fw-600 blanco m-auto">Contáctanos</div>
+  </a>
+
+  <div class="d-flex justify-content-center w-100">
+    <div class="w-100 mxwp-1200 row">
+      <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/abarrotes.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
+          </div>
+        </div>
+      </a>
+      <a href="productos-servicios.html"  class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/carnes.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Carnes</div>
+          </div>
+        </div>
+      </a>
+      <a href="productos-servicios.html"  class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/licores-bebidas.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Licores y bebidas</div>
+          </div>
+        </div>
+      </a>
+      <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/vinos-espumante.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Vinos y espumantes</div>
+          </div>
+        </div>
+      </a>
+     
+
     </div>
   </div>
 
