--- a/nosotros.html
+++ b/nosotros.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="logos\A.png">
-  <link rel="apple-touch-icon" href="logos\A.png">
+  <link rel="shortcut icon" href="media/favicon-v.png">
+  <link rel="apple-touch-icon" href="media/favicon-r.png">
 
   <!-- bootstrap 5.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="css/colors.css" />
   <link rel="stylesheet" href="css/helper.css" />
 
-  <title>SP Comercial</title>
+  <title>SP - Nosotros</title>
 
 </head>
 
