--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <!-- HEADER -->
   <div class="d-flex justify-content-center">
-    <div class="w-100 mxwp-2400 hp-240 d-flex justify-content-between px-5 align-items-center">
+    <div class="w-100 mxwp-2400 hp-180 d-flex justify-content-between px-5 align-items-center">
 
       <a href="index.html" class="d-flex align-items-center no-decotext link-menu">
         <div class="mxhp-60 mxwp-60">
@@ -148,7 +148,8 @@
   </a>
 
   <div class="d-flex justify-content-center w-100">
-    <div class="w-100 mxwp-1200 row">
+    <div class="w-100 mxwp-1200 row py-3">
+
       <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/abarrotes.png" class="hp-250 wp-250" />
@@ -185,10 +186,16 @@
           </div>
         </div>
       </a>
-     
 
     </div>
   </div>
+<!-- FIRMA -->
+  <a href="https://aldocarquin.github.io/" class="no-decotext">
+    <div class="bgc-negro w-100 ptp-15 pbp-15 d-flex justify-content-center">
+      <div class="f-comfortaa fsp-14 blanco my-auto pep-10">Página creada por</div>
+      <img src="media/logo_negative.png" class="hp-30" />
+    </div>
+  </a>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
