--- a/nosotros.html
+++ b/nosotros.html
@@ -42,9 +42,9 @@
 <body>
   <!-- HEADER -->
   <div class="d-flex justify-content-center">
-    <div class="w-100 mxwp-2400 hp-240 d-flex justify-content-between px-5 align-items-center">
+    <div class="w-100 mxwp-2400 hp-180 d-flex justify-content-between px-5 align-items-center">
 
-      
+
       <a href="index.html" class="d-flex align-items-center no-decotext link-menu">
         <div class="mxhp-60 mxwp-60">
           <img src="media/logo-simple.png" class="w-100 h-100" />
@@ -67,7 +67,8 @@
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
-            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y servicios</a>
+            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+              servicios</a>
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
@@ -78,19 +79,68 @@
       </div>
 
       <div class="">
-        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20" class="d-flex justify-content-start align-items-center link-menu py-1">
-          <div><img src="media/wzp.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div> 
+        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
+          class="d-flex justify-content-start align-items-center link-menu py-1">
+          <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
         </a>
-        <a href="mailto:ventas@spcomercial.cl" class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
-          <div><img src="media/mailto.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div> 
+        <a href="mailto:ventas@spcomercial.cl"
+          class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
+          <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
         </a>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="quienes w-100 mxhp-300">
+    <div class="mxwp-1200 m-auto">
+      <div class="w-100 row">
+        <div class="col-6 m-o p-0">
+          <img src="media/annie-spratt-QckxruozjRg-unsplash.jpg" class=" w-100 mxhp-300 ob-cover" />
+        </div>
+        <div class="col-6 m-auto p-0 h-100 f-comfortaa">
+          <div class="text-center fsp-24 blanco">Quienes somos</div>
+          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum. </div>
         </div>
       </div>
     </div>
   </div>
 
+  <div class="hp-20 w-100 mxhp-300"></div>
+
+  <div class="nosotros w-100 mnhp-200">
+    <div class="mxwp-1200 m-auto">
+      <div class="w-100 row">
+        <div class="col-6 m-auto p-0 h-100 f-comfortaa">
+          <div class="text-center fsp-24 blanco">Nosotros</div>
+          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum. </div>
+        </div>
+        <div class="col-6 m-o p-0">
+          <img src="media/annie-spratt-QckxruozjRg-unsplash.jpg" class=" w-100 mxhp-300 ob-cover" />
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="hp-20 w-100"></div>
+
+  <a href="contacto.html" class="w-100 hp-80 d-flex justify-content-center bgc-vitalia no-decotext">
+    <div class="f-comfortaa fsp-24 fw-600 blanco m-auto">Contáctanos</div>
+  </a>
+
+  <div class="w-100 hp-200 d-flex justify-content-center align-items-center">
+    <img src="media/SP_Claudio Orrego-08.png" class="mxhp-150"/>
+  </div>
+
+  <!-- FIRMA -->
+  <a href="https://aldocarquin.github.io/" class="no-decotext">
+    <div class="bgc-negro w-100 ptp-15 pbp-15 d-flex justify-content-center">
+      <div class="f-comfortaa fsp-14 blanco my-auto pep-10">Página creada por</div>
+      <img src="media/logo_negative.png" class="hp-30" />
+    </div>
+  </a>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
