--- a/contacto.html
+++ b/contacto.html
@@ -66,7 +66,8 @@
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
-            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y servicios</a>
+            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+              servicios</a>
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
@@ -77,29 +78,110 @@
       </div>
 
       <div class="">
-        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20" class="d-flex justify-content-start align-items-center link-menu py-1">
-          <div><img src="media/wzp.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div> 
+        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
+          class="d-flex justify-content-start align-items-center link-menu py-1">
+          <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
         </a>
-        <a href="mailto:ventas@spcomercial.cl" class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
-          <div><img src="media/mailto.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div> 
+        <a href="mailto:ventas@spcomercial.cl"
+          class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
+          <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
         </a>
-        </div>
       </div>
     </div>
   </div>
+  <div class="bgc-vitalia">
+    <div class="w-100 d-flex justify-content-center align-items-center">
+      <div class="f-comfortaa fsp-24 fw-700 blanco py-2"">Contáctanos</div>
+  </div>
+  <div class=" w-100 d-flex justify-content-center align-items-center pbp-30">
+        <div class="mxwp-1200 w-100">
+          <div class="row m-0 p-0">
+            <div class="col-6 p-0 m-0">
+              <div class="w-100 d-flex flex-column justify-content-center align-items-center py-2">
+                <div class="wp-200 hp-230 bgc-white d-flex justify-content-center align-items-center rounded-p50">
+                  <img src="media/contact.png" class="hp-150 wp-150" />
+                </div>
+                <div class="py-2">
+                  <a href="mailto:ventas@spcomercial.cl" class="d-flex py-1 no-decotext">
+                    <div class="px-2">
+                      <img src="media/contact-1.png" class="hp-40 wp-40" />
+                    </div>
+                    <div class="f-comfortaa fsp-18 blanco py-2">ventas@spcomercial.cl</div>
+                  </a>
+                  <div class="d-flex py-1">
+                    <div class="px-2">
+                      <img src="media/contact-2.png" class="hp-40 wp-40" />
+                    </div>
+                    <div class="f-comfortaa fsp-18 blanco py-2">+56 9 3419 5071</div>
+                  </div>
+                  <div class="d-flex py-1">
+                    <div class="px-2">
+                      <img src="media/contact-3.png" class="hp-40 wp-40" />
+                    </div>
+                    <div class="f-comfortaa fsp-18 blanco py-2">+56 9 7548 8358</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 m-0 p-0">
+              <div class="w-100">
+                <div class="py-2">
+                  <div class="f-comfortaa fsp-16 blanco py-1">Nombre:</div>
+                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
+                </div>
+                <div class="py-2">
+                  <div class="f-comfortaa fsp-16 blanco py-1">Empresa:</div>
+                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
+                </div>
+                <div class="py-2">
+                  <div class="f-comfortaa fsp-16 blanco py-1">Email:</div>
+                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
+                </div>
+                <div class="py-2">
+                  <div class="f-comfortaa fsp-16 blanco py-1">Teléfono:</div>
+                  <div class="w-100 hp-30 bgc-blanco rounded-p12"></div>
+                </div>
+                <div class="py-2">
+                  <div class="f-comfortaa fsp-16 blanco py-1">Mensaje:</div>
+                  <div class="w-100 hp-100 bgc-blanco rounded-p12"></div>
+                </div>
+
+                <div class="d-flex justify-content-center py-4">
+                  <button class="button-r f-comfortaa fsp-18 fw-700">Enviar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="w-100 hp-200 d-flex justify-content-center align-items-center">
+      <img src="media/SP_Claudio Orrego-08.png" class="mxhp-150" />
+    </div>
+
+    <!-- FIRMA -->
+    <a href="https://aldocarquin.github.io/" class="no-decotext">
+      <div class="bgc-negro w-100 ptp-15 pbp-15 d-flex justify-content-center">
+        <div class="f-comfortaa fsp-14 blanco my-auto pep-10">Página creada por</div>
+        <img src="media/logo_negative.png" class="hp-30" />
+      </div>
+    </a>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
-  </script>
+
+
+
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
