--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -66,7 +66,8 @@
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
-            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y servicios</a>
+            <a href="productos-servicios.html" class="link-menu f-comfortaa fsp-18 fw-700 px-3 ">Productos y
+              servicios</a>
           </div>
           <div class="m-0"><span class="dot"></span></div>
           <div class="d-flex justify-content-between align-content-center ">
@@ -77,19 +78,110 @@
       </div>
 
       <div class="">
-        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20" class="d-flex justify-content-start align-items-center link-menu py-1">
-          <div><img src="media/wzp.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div> 
+        <a href="https://wa.me/934195071?text=Hola.%20Quisiera%20cotizar%20con%20ustedes.%20"
+          class="d-flex justify-content-start align-items-center link-menu py-1">
+          <div><img src="media/wzp.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu">+56 9 3419 5071</div>
         </a>
-        <a href="mailto:ventas@spcomercial.cl" class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
-          <div><img src="media/mailto.png" class="hp-40 wp-40"/></div>
-          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div> 
+        <a href="mailto:ventas@spcomercial.cl"
+          class="d-flex justify-content-end align-items-center py-1 link-menu no-decotext">
+          <div><img src="media/mailto.png" class="hp-40 wp-40" /></div>
+          <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
         </a>
-        </div>
       </div>
     </div>
   </div>
+  </div>
 
+  <div class="w-100 bgc-vitalia d-flex justify-content-center align-items-center">
+    <div class="f-comfortaa fsp-24 fw-700 blanco py-2">Nuestros productos</div>
+  </div>
+
+  <div class="d-flex justify-content-center w-100">
+    <div class="w-100 mxwp-1200 row py-3">
+
+      <a href="" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/abarrotes.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
+          </div>
+        </div>
+      </a>
+      <a href="" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/carnes.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Carnes</div>
+          </div>
+        </div>
+      </a>
+      <a href="" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/licores-bebidas.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Licores y bebidas</div>
+          </div>
+        </div>
+      </a>
+      <a href="" class="col-3 justify-content-center align-items-between">
+        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+          <img src="media/vinos-espumante.png" class="hp-250 wp-250" />
+          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div class="position-absolute translate-middle top-50 start-50 text-center">
+            <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Vinos y espumantes</div>
+          </div>
+        </div>
+      </a>
+
+    </div>
+  </div>
+  <div class="w-100 mxwp-1200 ms-auto me-auto">
+    <div class="mxwp-600 ms-auto me-auto text-center">
+      <div class="f-comfortaa fsp-18">
+        GENERAL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+      </div>
+    </div>
+  </div>
+  <div class="w-100 mxwp-1200 ms-auto me-auto">
+    <div class="mxwp-600 ms-auto me-auto text-center">
+      <div class="f-comfortaa fsp-18">
+        Abarrotes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+      </div>
+    </div>
+  </div>
+  <div class="w-100 mxwp-1200 ms-auto me-auto">
+    <div class="mxwp-600 ms-auto me-auto text-center">
+      <div class="f-comfortaa fsp-18">
+        Carnes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+      </div>
+    </div>
+  </div>
+  <div class="w-100 mxwp-1200 ms-auto me-auto">
+    <div class="mxwp-600 ms-auto me-auto text-center">
+      <div class="f-comfortaa fsp-18">
+        Licores y bebidas Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+      </div>
+    </div>
+  </div>
+  <div class="w-100 mxwp-1200 ms-auto me-auto">
+    <div class="mxwp-600 ms-auto me-auto text-center">
+      <div class="f-comfortaa fsp-18">
+        Vinos y espumantes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
+        lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
+      </div>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center py-4">
+    <a href="contacto.html" class="button-r f-comfortaa fsp-18 fw-700">Cotiza con nosotros</a>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
