--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -37,14 +37,6 @@
 
   <title>SP - Productos y servicios</title>
 
-  <script>
-    $(document).ready(function () {
-        $(".abarrotes").click(function () {
-            $(".abarrote-oculto").toggleClass("oculto");
-        });
-    });
-</script>
-
 </head>
 
 <body>
@@ -108,7 +100,7 @@
   <div class="d-flex justify-content-center w-100">
     <div class="w-100 mxwp-1200 row py-3">
 
-      <div class="abarrotes col-3 justify-content-center align-items-between">
+      <button onclick="clickAbarrotes(); clickGeneral()" class="col-3 justify-content-center align-items-between border-0 bgc-blanco">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/abarrotes.png" class="hp-250 wp-250" />
           <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
@@ -116,7 +108,7 @@
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
           </div>
         </div>
-      </div>
+      </button>
       <a href="" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/carnes.png" class="hp-250 wp-250" />
@@ -147,15 +139,17 @@
 
     </div>
   </div>
-  <div id="general" class="visto w-100 mxwp-1200 ms-auto me-auto">
+  <div id="general" class="ease visto w-100 mxwp-1200 ms-auto me-auto">
     <div class="mxwp-600 ms-auto me-auto text-center">
       <div class="f-comfortaa fsp-18">
+        <div class="parrafo-producto">
         GENERAL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
         lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
       </div>
+      </div>
     </div>
   </div>
-  <div id="abarrotes" class="abarrote-oculto oculto w-100 mxwp-1200 ms-auto me-auto">
+  <!-- <div id="abarrotes" class=" abarrote-oculto oculto w-100 mxwp-1200 ms-auto me-auto">
     <div class="mxwp-600 ms-auto me-auto text-center">
       <div class="f-comfortaa fsp-18">
         Abarrotes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
@@ -186,7 +180,7 @@
         lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="d-flex justify-content-center py-4">
     <a href="contacto.html" class="button-r f-comfortaa fsp-18 fw-700">Cotiza con nosotros</a>
   </div>
@@ -200,6 +194,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous">
   </script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
