--- a/productos-servicios.html
+++ b/productos-servicios.html
@@ -100,49 +100,49 @@
   <div class="d-flex justify-content-center w-100">
     <div class="w-100 mxwp-1200 row py-3">
 
-      <button onclick="clickAbarrotes(); clickGeneral()" class="col-3 justify-content-center align-items-between border-0 bgc-blanco">
-        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+      <div class="col-3 justify-content-center align-items-between border-0 bgc-blanco">
+        <div id="abarrotes-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/abarrotes.png" class="hp-250 wp-250" />
           <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
           </div>
         </div>
-      </button>
-      <a href="" class="col-3 justify-content-center align-items-between">
-        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+      </div>
+      <div href="" class="col-3 justify-content-center align-items-between">
+        <div id="carnes-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/carnes.png" class="hp-250 wp-250" />
           <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Carnes</div>
           </div>
         </div>
-      </a>
-      <a href="" class="col-3 justify-content-center align-items-between">
-        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+      </div>
+      <div href="" class="col-3 justify-content-center align-items-between">
+        <div id="licores-btn" class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/licores-bebidas.png" class="hp-250 wp-250" />
           <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Licores y bebidas</div>
           </div>
         </div>
-      </a>
-      <a href="" class="col-3 justify-content-center align-items-between">
-        <div class="d-flex flex-column justify-content-center py-4 position-relative">
+      </div>
+      <div href="" class="col-3 justify-content-center align-items-between">
+        <div id="vinos-btn"  class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/vinos-espumante.png" class="hp-250 wp-250" />
           <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Vinos y espumantes</div>
           </div>
         </div>
-      </a>
+      </div>
 
     </div>
   </div>
   <div id="general" class="ease visto w-100 mxwp-1200 ms-auto me-auto">
     <div class="mxwp-600 ms-auto me-auto text-center">
       <div class="f-comfortaa fsp-18">
-        <div class="parrafo-producto">
+        <div class="parrafo">
         GENERAL Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi
         lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum.
       </div>
