--- a/contacto.html
+++ b/contacto.html
@@ -91,16 +91,16 @@
       </div>
     </div>
   </div>
-  <div class="bgc-vitalia">
-    <div class="w-100 d-flex justify-content-center align-items-center">
+  <div class="">
+    <div class="w-100 bgc-vitalia d-flex justify-content-center align-items-center">
       <div class="f-comfortaa fsp-24 fw-700 blanco py-2"">Contáctanos</div>
   </div>
-  <div class=" w-100 d-flex justify-content-center align-items-center pbp-30">
-        <div class="mxwp-1200 w-100">
+  <div class=" w-100 d-flex justify-content-center align-items-center pbp-30 ptp-50">
+        <div class="mxwp-1200 bgc-vitalia w-100 p-5 rounded-p50 somb-exte-50">
           <div class="row m-0 p-0">
             <div class="col-6 p-0 m-0">
               <div class="w-100 d-flex flex-column justify-content-center align-items-center py-2">
-                <div class="wp-200 hp-230 bgc-white d-flex justify-content-center align-items-center rounded-p50">
+                <div class="wp-200 hp-230 mbp-20 bgc-white d-flex justify-content-center align-items-center rounded-p50 somb-exte-40">
                   <img src="media/contact.png" class="hp-150 wp-150" />
                 </div>
                 <div class="py-2">
@@ -126,7 +126,7 @@
               </div>
             </div>
             <div class="col-6 m-0 p-0">
-              <div class="w-100">
+              <div class="w-100 pep-ajusteform ">
                 <form id="formulario" class="" method="post">
                   <div class="p-2">
                     <label for="nombre" class="f-comfortaa fsp-16 blanco py-1">Nombre:</label>
