--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <div class="w-100 mxwp-2400 hp-180 d-flex justify-content-between px-5 align-items-center">
 
       <a href="index.html" class="d-flex align-items-center no-decotext link-menu">
-        <div class="mxhp-60 mxwp-60">
-          <img src="media/logo-simple.png" class="w-100 h-100" />
+        <div class="mxhp-90 mxwp-90">
+          <img src="media/logo-simple.png" class="w-100 h-180" />
         </div>
         <div class="d-flex flex-column psp-10 no-decotext link-menu">
-          <span class="f-comfortaa fsp-16 fw-700">Comercializadora y distribuidora</span>
-          <span class="f-comfortaa fsp-16 fw-700">San Pancracio</span>
+          <span class="f-comfortaa fsp-17 fw-700">Comercializadora y Distribuidora</span>
+          <span class="f-comfortaa fsp-17 fw-700">San Pancracio</span>
         </div>
       </a>
 
@@ -111,31 +111,32 @@
     </div>
 
     <div class="position-absolute top-0 start-0 w-100 h-100">
-      <div class="w-100 h-100 d-flex justify-content-center align-items-center">
+      <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
         <div class="">
-          <img src="media/logo-simple.png" class="h-auto mxwp-400">
+          <img src="media/logo-simple.png" class="h-auto mxwp-100">
         </div>
+        <div class="text-center fw-700 f-comfortaa fsp-18 mxwp-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum.</div>
       </div>
     </div>
   </div>
 
   <div class="d-flex justify-content-center w-100">
     <div class="w-100 mxwp-1200 row">
+      <div class="col-4 justify-content-center align-content-center">
+        <div class="d-flex flex-column justify-content-center py-4">
+          <img src="media/hoteles.svg" class="mxhp-80" />
+          <div class="f-comfortaa fsp-24 fw-600 text-center">Hotelería</div>
+        </div>
+      </div>
       <div class="col-4 d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center py-4">
-          <img src="media/restaurant.svg" class="mxhp-120" />
+          <img src="media/restaurant.svg" class="mxhp-80" />
           <div class="f-comfortaa fsp-24 fw-600 text-center">Restaurantes</div>
         </div>
       </div>
       <div class="col-4 justify-content-center align-content-center">
         <div class="d-flex flex-column justify-content-center py-4">
-          <img src="media/hoteles.svg" class="mxhp-120" />
-          <div class="f-comfortaa fsp-24 fw-600 text-center">Hotelería</div>
-        </div>
-      </div>
-      <div class="col-4 justify-content-center align-content-center">
-        <div class="d-flex flex-column justify-content-center py-4">
-          <img src="media/cattering.svg" class="mxhp-120" />
+          <img src="media/cattering.svg" class="mxhp-80" />
           <div class="f-comfortaa fsp-24 fw-600 text-center">Cattering</div>
           <div class="f-comfortaa fsp-24 fw-600 text-center">y banquetería</div>
         </div>
