--- a/nosotros.html
+++ b/nosotros.html
@@ -40,18 +40,17 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-  <div class="d-flex justify-content-center">
+   <!-- HEADER -->
+   <div class="d-flex justify-content-center">
     <div class="w-100 mxwp-2400 hp-180 d-flex justify-content-between px-5 align-items-center">
 
-
       <a href="index.html" class="d-flex align-items-center no-decotext link-menu">
-        <div class="mxhp-60 mxwp-60">
-          <img src="media/logo-simple.png" class="w-100 h-100" />
+        <div class="mxhp-90 mxwp-90">
+          <img src="media/logo-simple.png" class="w-100 h-180" />
         </div>
         <div class="d-flex flex-column psp-10 no-decotext link-menu">
-          <span class="f-comfortaa fsp-16 fw-700">Comercializadora y distribuidora</span>
-          <span class="f-comfortaa fsp-16 fw-700">San Pancracio</span>
+          <span class="f-comfortaa fsp-17 fw-700">Comercializadora y Distribuidora</span>
+          <span class="f-comfortaa fsp-17 fw-700">San Pancracio</span>
         </div>
       </a>
 
@@ -90,9 +89,11 @@
           <div class="f-comfortaa fsp-16 fw-700 psp-10 link-menu no-decotext">ventas@spcomercial.cl</div>
         </a>
       </div>
+
     </div>
   </div>
   </div>
+  <!-- CONTENT -->
 
   <div class="quienes w-100 mxhp-300">
     <div class="mxwp-1200 m-auto">
@@ -102,7 +103,7 @@
         </div>
         <div class="col-6 m-auto p-0 h-100 f-comfortaa">
           <div class="text-center fsp-24 blanco">Quienes somos</div>
-          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum. </div>
+          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto">SP Comercial fue fundada en 2022 por los hermanos Claudio y Ricardo Orrego, con el objetivo de entregar una oferta competitiva y de calidad en los insumos y productos que requiere restaurantes, hoteles y empresas de catering.</div>
         </div>
       </div>
     </div>
@@ -114,8 +115,8 @@
     <div class="mxwp-1200 m-auto">
       <div class="w-100 row">
         <div class="col-6 m-auto p-0 h-100 f-comfortaa">
-          <div class="text-center fsp-24 blanco">Nosotros</div>
-          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum. Morbi lacinia nunc vel quam feugiat ullamcorper. Sed pulvinar libero ut pellentesque fermentum. </div>
+          <div class="text-center fsp-24 blanco">Nuestra misión</div>
+          <div class="text-center fsp-18 blanco mxwp-500 ptp-10 m-auto ease-out">Ser un socio estratégico y de largo plazo para nuestros clientes, entregando un servicio de excelencia en cada una las instancias de contacto, aportándoles valor a sus procesos de abastecimiento y servicio.</div>
         </div>
         <div class="col-6 m-o p-0">
           <img src="media/annie-spratt-QckxruozjRg-unsplash.jpg" class=" w-100 mxhp-300 ob-cover" />
