--- a/index.html
+++ b/index.html
@@ -93,49 +93,53 @@
     </div>
   </div>
   </div>
+  <!-- CONTENT -->
 
   <div class="position-relative">
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
+    <div id="" class="">
+      <div class="">
+        <div class="">
           <img src="media/banner_01.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
         </div>
-        <div class="carousel-item">
+        <!-- <div class="carousel-item">
           <img src="media/banner_02.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
         </div>
         <div class="carousel-item">
           <img src="media/banner_03.png" class="d-block w-100 op-030 mxhp-350 w-100 ob-cover" alt="...">
-        </div>
+        </div> -->
       </div>
     </div>
 
-    <div class="position-absolute top-0 start-0 w-100 h-100">
-      <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
-        <div class="">
-          <img src="media/logo-simple.png" class="h-auto mxwp-100">
+    <div class="position-absolute top-0 start-0 w-100 h-100 over-hidden">
+      <div id="tablon" class="w-100 h-100 position-relative">
+        <div id="pFotoIndex" class="ease-out position-absolute start-50 top-50 translate-middle">
+          <img id="fotoIndex" src="media/logo-simple.png" class="ease-out h-auto mxwp-200">
         </div>
-        <div class="text-center fw-700 f-comfortaa fsp-18 mxwp-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia ullamcorper elementum.</div>
+        <div id="parrafoIndex"
+          class="position-absolute translate-middle start-50 top-50 mtp-300 ease-out text-center fw-700 f-comfortaa fsp-18 mxwp-800 general">
+          Entregamos una oferta amplia y competitiva de abarrotes no perecibles y congelados, además de una gran
+          variedad de bebidas alcohólicas y no alcohólicas para todo el canal HORECA. </div>
       </div>
     </div>
   </div>
 
   <div class="d-flex justify-content-center w-100">
-    <div class="w-100 mxwp-1200 row">
-      <div class="col-4 justify-content-center align-content-center">
-        <div class="d-flex flex-column justify-content-center py-4">
+    <div class="w-100 mxwp-1200 row mbp-30">
+      <div class="col-4 justify-content-center">
+        <div id="hotel" class="d-flex flex-column justify-content-center mxwp-220 ms-auto me-auto mtp-30">
           <img src="media/hoteles.svg" class="mxhp-80" />
           <div class="f-comfortaa fsp-24 fw-600 text-center">Hotelería</div>
         </div>
       </div>
-      <div class="col-4 d-flex justify-content-center align-items-center">
-        <div class="d-flex flex-column justify-content-center py-4">
+      <div class="col-4 justify-content-center">
+        <div id="restaurant" class="d-flex flex-column justify-content-center mxwp-220 ms-auto me-auto mtp-30">
           <img src="media/restaurant.svg" class="mxhp-80" />
-          <div class="f-comfortaa fsp-24 fw-600 text-center">Restaurantes</div>
+          <div class="f-comfortaa fsp-24 fw-600 text-center">Restautantes</div>
         </div>
       </div>
-      <div class="col-4 justify-content-center align-content-center">
-        <div class="d-flex flex-column justify-content-center py-4">
+      <div class="col-4 justify-content-center">
+        <div id="cattering" class="d-flex flex-column justify-content-center mxwp-220 ms-auto me-auto mtp-30">
           <img src="media/cattering.svg" class="mxhp-80" />
           <div class="f-comfortaa fsp-24 fw-600 text-center">Cattering</div>
           <div class="f-comfortaa fsp-24 fw-600 text-center">y banquetería</div>
@@ -154,25 +158,31 @@
       <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/abarrotes.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div
+            class="hp-250 wp-250 mtp--250 producto transition-ease-out d-flex justify-content-center align-items-center">
+          </div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Abarrotes</div>
           </div>
         </div>
       </a>
-      <a href="productos-servicios.html"  class="col-3 justify-content-center align-items-between">
+      <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/carnes.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div
+            class="hp-250 wp-250 mtp--250 producto transition-ease-out d-flex justify-content-center align-items-center">
+          </div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Carnes</div>
           </div>
         </div>
       </a>
-      <a href="productos-servicios.html"  class="col-3 justify-content-center align-items-between">
+      <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/licores-bebidas.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div
+            class="hp-250 wp-250 mtp--250 producto transition-ease-out d-flex justify-content-center align-items-center">
+          </div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Licores y bebidas</div>
           </div>
@@ -181,7 +191,9 @@
       <a href="productos-servicios.html" class="col-3 justify-content-center align-items-between">
         <div class="d-flex flex-column justify-content-center py-4 position-relative">
           <img src="media/vinos-espumante.png" class="hp-250 wp-250" />
-          <div class="hp-250 wp-250 mtp--250 producto d-flex justify-content-center align-items-center"></div>
+          <div
+            class="hp-250 wp-250 mtp--250 producto transition-ease-out d-flex justify-content-center align-items-center">
+          </div>
           <div class="position-absolute translate-middle top-50 start-50 text-center">
             <div class="f-comfortaa fsp-24 op-100 blanco msp--20 mtp-10">Vinos y espumantes</div>
           </div>
@@ -190,7 +202,7 @@
 
     </div>
   </div>
-<!-- FIRMA -->
+  <!-- FIRMA -->
   <a href="https://aldocarquin.github.io/" class="no-decotext">
     <div class="bgc-negro w-100 ptp-15 pbp-15 d-flex justify-content-center">
       <div class="f-comfortaa fsp-14 blanco my-auto pep-10">Página creada por</div>
@@ -198,7 +210,7 @@
     </div>
   </a>
 
-
+  <script src="js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
   </script>
