--- a/contacto.html
+++ b/contacto.html
@@ -162,7 +162,7 @@
                       class="w-100 hp-30 no-decotext bgc-blanco rounded-p12 p-2"></input>
                   </div>
                   <div class="p-2">
-                    <div class="d-flex align-items-center justify-content-between pbp-10">
+                    <div class="d-aflex align-items-center justify-content-between pbp-10">
                       <label for="mensaje" class="f-comfortaa fsp-16 blanco py-1">Mensaje</label>
                     </div>
                     <textarea id="mensaje" name="mensaje" type="text" placeholder="Redacta aquí tu mensaje"
